# rag_recipe_learn

./: .gitignore  config.py  main.py  pyproject.toml
rag_modules/: __init__.py  data_preparation.py  generation_integration.py  index_construction.py  retrieval_optimization.py
