[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.7.0",
    "langchain==0.3.26",
    "langchain-community==0.3.27",
    "langchain-huggingface==0.3.1",
    "langchain-text-splitters==0.3.8",
    "langchain-unstructured==0.1.6",
    "lazy-loader==0.4",
    "markdown==3.8.2",
    "openai>=1.86.0,<2.0.0",
    "rank-bm25==0.2.2",
    "sentence-transformers>=3.0.0",
    "unstructured==0.18.11",
]
